Refactor deterministic room discovery